objects/X7S_Event_RSVP__c/X7S_Event_RSVP__c.object-meta.xml
<CustomObject>
    <description>Object to support Event RSVP records as part of the Events accelerator from 7Summits.</description>
    <label>7S Event RSVP</label>
    <nameField>
        <displayFormat>RSVP-{0000}</displayFormat>
        <label>Event RSVP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Event RSVPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>