objects/X7S_Event_RSVP__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>7S Event RSVPs</relationshipLabel>
    <relationshipName>X7S_Event_RSVPs</relationshipName>
    <type>Lookup</type>
</CustomField>