objects/X7S_Event_RSVP__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Will be populated automatically and set to read only if a authenticated user is the owner</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>