objects/X7S_Event_RSVP__c/fields/Event_Segment__c.field-meta.xml
<CustomField>
    <fullName>Event_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>7S Event Segment</label>
    <referenceTo>X7S_Event_Segment__c</referenceTo>
    <relationshipLabel>7S Event RSVPs</relationshipLabel>
    <relationshipName>X7S_Event_RSVPs</relationshipName>
    <type>Lookup</type>
</CustomField>