objects/X7S_Event_RSVP__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>