objects/X7S_Event_RSVP__c/fields/External_Platform_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Platform_Id__c</fullName>
    <description>Populated by external service</description>
    <label>External Platform Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>