objects/X7S_Event_RSVP__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Will be populated automatically and set to read only if a authenticated user is the owner</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>