objects/X7S_Event_RSVP__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Will be populated automatically and set to read only if a authenticated user is the owner</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>