objects/X7S_Event_RSVP__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>7S Event RSVPs</relationshipLabel>
    <relationshipName>X7S_Event_RSVPs</relationshipName>
    <type>Lookup</type>
</CustomField>