objects/X7S_Event_RSVP__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>