objects/X7S_Event_RSVP__c/fields/Participant_Duration__c.field-meta.xml
<CustomField>
    <fullName>Participant_Duration__c</fullName>
    <description>Populated by external service</description>
    <label>Participant Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>