objects/X7S_Event_RSVP__c/fields/Participant_End__c.field-meta.xml
<CustomField>
    <fullName>Participant_End__c</fullName>
    <description>Populated by external service</description>
    <label>Participant End</label>
    <type>DateTime</type>
</CustomField>