objects/X7S_Event_RSVP__c/fields/Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Id__c</fullName>
    <description>Populated by external service</description>
    <label>Participant Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>