objects/X7S_Event_RSVP__c/fields/Participant_Start__c.field-meta.xml
<CustomField>
    <fullName>Participant_Start__c</fullName>
    <description>Populated by external service</description>
    <label>Participant Start</label>
    <type>DateTime</type>
</CustomField>