objects/X7S_Event_RSVP__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>