objects/X7S_Event_RSVP__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Populated by external service</description>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>