objects/X7S_Event_RSVP__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <description>Populated by external service</description>
    <label>Registration Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>