objects/X7S_Event_RSVP__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration_Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>