objects/X7S_Event_RSVP__c/fields/Registration_Url__c.field-meta.xml
<CustomField>
    <fullName>Registration_Url__c</fullName>
    <description>Populated by external service</description>
    <label>Registration Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>