objects/X7S_Event_RSVP__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attending</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>