objects/X7S_Event_RSVP__c/validationRules/User_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>User_must_be_set</fullName>
    <active>true</active>
    <description>User or Contact or Lead field cannot be blank on RSVP record</description>
    <errorConditionFormula>ISBLANK(User__c) &amp;&amp; ISBLANK(Contact__c) &amp;&amp; ISBLANK(Lead__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User or Contact or Lead field is not set. One of these are required.</errorMessage>
</ValidationRule>